--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,34 +1,50 @@
-name: Deploy to Vercel
+name: Release and Deploy
 
 on:
   push:
-    branches:
-      - main  # Replace with your main branch name if different
+    branches: [main]
 
 jobs:
-  build-and-deploy:
+  release:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write        # tag & push
+      issues: write          # create release-issue on failure
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+      - run: npm ci
+      - run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'  # Replace with your project's required Node.js version
-        cache: npm
+  deploy:
+    needs: release  # Ensure deployment runs after the release job
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
 
-    - name: Build project
-      run: npm run build  # Replace with your build command if different
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v20
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-        vercel-args: '--prod'  # Deploy to production
+      - name: Build project
+        run: npm run build  # Adjust the build command if necessary
+
+      - name: Deploy to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel --prod --token $VERCEL_TOKEN
